--- a/views/DataTables.ejs
+++ b/views/DataTables.ejs
@@ -62,6 +62,7 @@
                 </tr>
             </thead>
             <tbody>
+            <% id(result){ %>
                         <% for (let i=0; i< result.length;i++ ) { %>
                             <% for (let i2=0; i2< result2.length;i2++ ) { %>
                   
@@ -83,7 +84,7 @@
                         <% } %>
                         
 <% } %>
-
+<% } %>
             </tbody>
         </table>
 
@@ -99,6 +100,7 @@
                 </tr>
             </thead>
             <tbody>
+             <% id(result2){ %>
                 <% for (let i=0; i< result2.length;i++ ) { %>
         <% for (let i2=0; i2< result2.length;i2++ ) { %>
                     <tr>
@@ -116,7 +118,7 @@
                     </td>
                     </tr>
                     <% } %>
-        
+        <% } %>
         <% } %>
         
             </tbody>
