--- a/Views/DataTables.ejs
+++ b/Views/DataTables.ejs
@@ -109,7 +109,7 @@
                         <%= i %>
                     </th>
                     <td>
-                        <%= result[i][i2].name %>
+                        <%= result2[i][i2].name %>
                     </td>
                     <td>
                         <%= result[i][i2].displayName %>
