--- a/views/DataTables.ejs
+++ b/views/DataTables.ejs
@@ -49,23 +49,29 @@
             </div>
   <input type="submit" value="submit">
         </form> -->
-        <table id="table" class="table table-striped " data-filter-control="true" data-show-search-clear-button="true"
-            data-filter-control-container="#search" > 
-            <thead>
-                <tr>
-                    
-                        <th data-field="name" data-filter-control="input"> intent</th>
-                    <th data-field="id">ID</th>
-                   
-            <th data-field="name" data-filter-control="input"> name</th>
-            <th data-field="price" data-filter-control="select">displayName</th>
-                </tr>
-            </thead>
-            <tbody>
-            <% if(result[0].length > 1){ %>
-                        <% for (let i=0; i< result.length;i++ ) { %>
-                            <% for (let i2=0; i2< result.length;i2++ ) { %>
-                  
+       
+        <% for (let ia=0; ia< finalResult.length;ia++ ) { %>
+           
+            <h2>
+                <%= projectIds[ia] %>
+
+             </h2>   
+
+                <table id="table" class="table table-striped " data-filter-control="true" data-show-search-clear-button="true"
+                    data-filter-control-container="#search">
+                    <thead>
+                        <tr>
+                
+                            <th data-field="name" data-filter-control="input"> intent</th>
+                            <th data-field="id">ID</th>
+                
+                            <th data-field="name" data-filter-control="input"> name</th>
+                            <th data-field="price" data-filter-control="select">displayName</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% if(finalResult[ia].length> 1){ %>
+                            <% for (let i=0; i< ia;i++ ) { %>
                         <tr>
                             <th scope="row">
                                 <%= %>
@@ -73,88 +79,101 @@
                             <th scope="row">
                                 <%= i %>
                             </th>
-                            
-                            <td>
-                                <%= result[i][i2].name %>
-                            </td>
-                            <td>
-                                <%= result[i][i2].displayName %>
-                            </td>
-                        </tr>
-                        <% } %>
-                                 <% } %>  
-
-  <%  } else { %>
-      <tr>
-                        <th scope="row">
-                            <%=  %>
-                        </th>
-                    <th scope="row">
-                        <%=  %>
-                    </th>
-                    <td>
-                        <%=  %>
-                    </td>
-                    <td>
-                        <%=  %>
-                    </td>
-                    </tr>
-   
-<% } %>
-            </tbody>
-        </table>
-     
-        <table id="table" class="table table-striped " data-filter-control="true" data-show-search-clear-button="true"
-            data-filter-control-container="#search">
-            <thead>
-                <tr>
-
-                    <th data-field="name" data-filter-control="input"> entity</th>
-                    <th data-field="id">ID</th>
-                    <th data-field="name" data-filter-control="input"> name</th>
-                    <th data-field="price" data-filter-control="select">displayName</th>
-                </tr>
-            </thead>
-            <tbody>
-             <% if(result2[0].length > 1){ %>
-                <% for (let i=0; i< result2.length;i++ ) { %>
-        <% for (let i2=0; i2< result2.length;i2++ ) { %>
-                    <tr>
-                        <th scope="row">
-                            <%=  %>
-                        </th>
-                    <th scope="row">
-                        <%= 0 %>
-                    </th>
                         <td>
-                                <%= result2[i][i2].name %>
-                            </td>
-                            <td>
-                                <%= result2[i][i2].displayName %>
-                            </td>
-                    </tr>
-                    <% } %>
-        <% } %>
-      
-  <%  } else { %>
-          <tr>
-                        <th scope="row">
-                            <%=  %>
-                        </th>
-                    <th scope="row">
-                        <%= 0 %>
-                    </th>
-                    <td>
-                        <%=  %>
-                    </td>
-                    <td>
-                        <%=  %>
-                    </td>
-                    </tr>
-          <% } %>
-    
-            </tbody>
-        </table>
+                            <% if(finalResult[ia][0].length > 1){ %>
+                                <%= finalResult[ia][0][i].name %>
+                        
+                        </td>
+                        <td>
+                            <%= finalResult[ia][0][i].displayName %>
+                        </td>
+                        
+                        
+                        <% } %>
+                        </tr>
+                                        <% } %>
+            
+                                            <% } else { %>
+                                                <tr>
+                                                    <th scope="row">
+                                                        <%= %>
+                                                    </th>
+                                                    <th scope="row">
+                                                        <%= i %>
+                                                    </th>
+                                                    
+                                                    <td>
+                                                        <%=  %>
+                                                    </td>
+                                                    <td>
+                                                        <%=  %>
+                                                    </td>
+                                                </tr>
+              
+                                                  <% } %>
+                    </tbody>
+                </table>
+                
+                <table id="table" class="table table-striped " data-filter-control="true" data-show-search-clear-button="true"
+                    data-filter-control-container="#search">
+                    <thead>
+                        <tr>
+                
+                            <th data-field="name" data-filter-control="input"> entites</th>
+                            <th data-field="id">ID</th>
+                
+                            <th data-field="name" data-filter-control="input"> name</th>
+                            <th data-field="price" data-filter-control="select">displayName</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% if(finalResult[ia].length> 1){ %>
+                            <% for (let i=0; i< ia;i++ ) { %>
+                                <tr>
+                                    <th scope="row">
+                                        <%= %>
+                                    </th>
+                                    <th scope="row">
+                                        <%= i %>
+                                    </th>
+                            
+                                        <td>
+                                           <%   if(finalResult[ia][1] .length > 1){ %>
+                                            <%= finalResult[ia][1][i].name %>
+                                           
+                                        </td>
+                                        <td>
+                                            <%= finalResult[ia][1][i].displayName %>
+                                        </td>
+
+
+                                        <% } %>
+                                </tr>
+                                <% } %>
+                                 
+                    
+                                            <% } else { %>
+                                                <tr>
+                                                    <th scope="row">
+                                                        <%= %>
+                                                    </th>
+                                                    <th scope="row">
+                                                        <%= %>
+                                                    </th>
+                                                    <td>
+                                                        <%= %>
+                                                    </td>
+                                                    <td>
+                                                        <%= %>
+                                                    </td>
+                                                </tr>
+                <% } %>
+                                             
+                    </tbody>
+                </table>
+
+      <% } %>
+       
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"
