--- a/views/DataTables.ejs
+++ b/views/DataTables.ejs
@@ -50,7 +50,7 @@
   <input type="submit" value="submit">
         </form> -->
        
-        <% for (let ia=0; ia< finalResult.length;ia++ ) { %>
+        <% for (let ia=0; ia < finalResult.length;ia++ ) { %>
            
             <h2>
                 <%= projectIds[ia] %>
@@ -72,6 +72,7 @@
                     <tbody>
                         <% if(finalResult[ia].length> 1){ %>
                             <% for (let i=0; i< ia;i++ ) { %>
+                            <% for (let i2=0; i2< i;i2++ ) { %>
                         <tr>
                             <th scope="row">
                                 <%= %>
@@ -80,19 +81,19 @@
                                 <%= i %>
                             </th>
                         <td>
-                            <% if(finalResult[ia][0].length > 1){ %>
-                                <%= finalResult[ia][0][i].name %>
+                            <% if(finalResult[ia][0][i].length> 1){ %>
+                                <%= finalResult[ia][0][i][i2].name %>
                         
                         </td>
                         <td>
-                            <%= finalResult[ia][0][i].displayName %>
+                            <%= finalResult[ia][0][i][i2].displayName %>
                         </td>
                         
                         
                         <% } %>
                         </tr>
                                         <% } %>
-            
+            <% } %>
                                             <% } else { %>
                                                 <tr>
                                                     <th scope="row">
@@ -129,6 +130,7 @@
                     <tbody>
                         <% if(finalResult[ia].length> 1){ %>
                             <% for (let i=0; i< ia;i++ ) { %>
+                                <% for (let i2=0; i2< i;i2++ ) { %>
                                 <tr>
                                     <th scope="row">
                                         <%= %>
@@ -136,22 +138,21 @@
                                     <th scope="row">
                                         <%= i %>
                                     </th>
+                            <td>
+                                <% if(finalResult[ia][1][i].length> 1){ %>
+                                    <%= finalResult[ia][1][i][i2].name %>
                             
-                                        <td>
-                                           <%   if(finalResult[ia][1] .length > 1){ %>
-                                            <%= finalResult[ia][1][i].name %>
-                                           
-                                        </td>
-                                        <td>
-                                            <%= finalResult[ia][1][i].displayName %>
-                                        </td>
+                            </td>
+                            <td>
+                                <%= finalResult[ia][1][i][i2].displayName %>
+                            </td>
 
 
                                         <% } %>
                                 </tr>
                                 <% } %>
                                  
-                    
+                        <% } %>
                                             <% } else { %>
                                                 <tr>
                                                     <th scope="row">
