--- a/views/DataTables.ejs
+++ b/views/DataTables.ejs
@@ -81,7 +81,7 @@
                                 <%= i %>
                             </th>
                         <td>
-                            <% if(finalResult[ia][0][i].length> 1){ %>
+                            <% if(finalResult[ia][0].length> 1){ %>
                                 <%= finalResult[ia][0][i][i2].name %>
                         
                         </td>
@@ -139,7 +139,7 @@
                                         <%= i %>
                                     </th>
                             <td>
-                                <% if(finalResult[ia][1][i].length> 1){ %>
+                                <% if(finalResult[ia][1].length> 1){ %>
                                     <%= finalResult[ia][1][i][i2].name %>
                             
                             </td>
